--- a/main.html
+++ b/main.html
@@ -35,10 +35,10 @@
 
 		  <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Coading
+            Coding
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Coading Tools</a></li>
+            <li><a class="dropdown-item" href="#">Coding Tools</a></li>
 			<li><a class="dropdown-item" href="#">HTML</a></li>
             <li><a class="dropdown-item" href="#">CSS</a></li>
 <!--             <li><hr class="dropdown-divider"></li> -->
